# rust.irc

./: .gitignore  Cargo.toml  README.md  RustIRC.code-workspace
config/: session.ini
lib/modules/client/: Cargo.toml
lib/modules/client/src/: main.rs
lib/modules/listener/: .env.example  Cargo.toml
lib/modules/listener/src/: main.rs
lib/modules/listener/src/lib/: hex.rs
lib/modules/listener/src/util/: generate_uuid.rs  log.rs  mod.rs
lib/modules/server/: Cargo.toml
lib/modules/server/src/: main.rs
lib/modules/server/src/util/: generate_uuid.rs  log.rs
src/: main.rs
src/commands/: .example  exit.rs  help.rs  join.rs  listen.rs  mod.rs
src/lib/: hex.rs
src/util/: host.rs  mod.rs  session.rs
