[package]
name = "RustIRC"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
rust-ini = "0.21.1"
rand  = "0.8.5"
lazy_static = "1.5.0"
anyhow = "1.0.93"
figlet-rs = "0.1.5"
colored = "2.1.0"
tabled ={ version = "0.16.0" }
rsa = "0.9.6"
base64 = "0.22.1"