[package]
name = "listener"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio =  {version = "1.41.1", features = ["full"]}
serde = {version = "1.0.215", features = ["derive"]}
serde_json = "1.0.133"
dotenv = "0.15.0"
clap = { version="4.5.21", features = ["derive"] }
redis = "0.27.5"
uuid = { version = "1.11.0", features = ["v4"] }
hex = "0.4.3"
rand = "0.8.5"
chrono = "0.4.38"
colored = "2.1.0"
crossterm = "0.28.1"
log = "0.4"
env_logger = "0.11.5"
rust-ini = "0.21.1"